--- a/src/pages/why-alignment/default-dangerous.mdx
+++ b/src/pages/why-alignment/default-dangerous.mdx
@@ -32,22 +32,26 @@ _Okay, even if that’s true, how would a chatbot take over the world?_
 	<span className='font-bold'>How could a computer program gain or wield power?</span>
 </p>
 
+A computer program doesn't actually serve as a constraint for any generally intelligent agent.
+
 <Toggle
-	title={
-		<div>
-			<p>A computer program doesn't actually serve as a constraint for any generally intelligent agent.</p>
-			<p className='mt-3'>
-				Through the digital world alone, even humans (not to mention a a superintelligent AI) can strategically manipulate people, hack into technology, engineer new devices, and amass financial
-				resources to achieve its goals.
-			</p>
-		</div>
-	}
+	title="Through the digital world alone, even humans (not to mention a a superintelligent AI) can strategically manipulate people, hack into technology, engineer new devices, and amass financial resources to achieve its goals."
 >
-	To illustrate, here is one way this could happen (although there are many others): 1. Humans develop an AI system that becomes more intelligent over time, mainly with human intervention responsible
-	for capability improvements. 2. After sufficient improvement, the AI system eventually understands the world well enough that it can improve its own design. 3. The AI system covertly develops
-	long-term goals and realizes it does not need to act truthfully around humans. 4. The AI system gains access to the physical world, either by gaining access to the Internet, hacking into robots, or
-	blackmailing humans to carry out actions on its behalf. 5. The AI system finally implements its long-term plan, optimizing its current objectives, which may differ from its original human-specified
-	objectives.
+    To illustrate, here is one way this could happen (although there are many others):
+    1. Humans develop an AI system that becomes more intelligent over time, mainly with human intervention responsible
+    for capability improvements.
+
+    2. After sufficient improvement, the AI system eventually understands the world well enough that it can improve its own design.
+
+    3. The AI system covertly develops
+    long-term goals and realizes it does not need to act truthfully around humans.
+
+    4. The AI system gains access to the physical world, either by gaining access to the Internet, hacking into robots, or
+    blackmailing humans to carry out actions on its behalf.
+
+    5. The AI system finally implements its long-term plan, optimizing its current objectives, which may differ from its original human-specified
+    objectives.
+
 </Toggle>
 
 _But why should we expect it to use its power to the detriment of humankind?_
@@ -62,9 +66,9 @@ In short, **no**. An AI system will use its power in a way to maximize its goals
 
 <Toggle
 	title={
-		<div>
+		<span>
 			More generally, the <b>orthogonality thesis</b> asserts that <i>any</i> level of intelligence can be combined with <i>any</i> final goal.
-		</div>
+		</span>
 	}
 >
 	- Classic example: paperclip maximization. - Let's say aliens came to Earth and offered us 1 million dollars every time we made a paperclip. - Despite the fact our intelligence is far more than the
@@ -76,9 +80,9 @@ Moreover, even if the AI system’s final goals seem safe, it is likely that it 
 
 <Toggle
 	title={
-		<div>
+		<span>
 			These goals are known as <b>convergent instrumental goals</b>, i.e. intermediate goals or strategies that are useful in pursuing (almost) any final goal.
-		</div>
+		</span>
 	}
 >
 	- For example, even if an AI agent’s final goal has nothing to do with self-preservation, self-preservation is likely necessary for achieving its final goal, and hence almost any agent will assume
