--- a/src/pages/why-alignment/why-alignment-is-difficult.mdx
+++ b/src/pages/why-alignment/why-alignment-is-difficult.mdx
@@ -38,7 +38,7 @@ _Wait, why is that difficult?_
 
 ---
 
-<Toggle title={<div>Anything it doesn’t value will be lost forever. How can we ensure that a powerful AI system doesn’t take actions that conflict with things humans care about?</div>}>
+<Toggle title={"Anything it doesn’t value will be lost forever. How can we ensure that a powerful AI system doesn’t take actions that conflict with things humans care about?"}>
     
     If you have a sufficiently powerful agent and manage to come up with a really good objective that cares about the top 20 things humans value, **the 21st thing that humans value will be gone forever**.
     
@@ -50,9 +50,9 @@ _Wait, why is that difficult?_
 
 <Toggle
 	title={
-		<div>
+		<span>
 			But that scenario is unrealistic in many ways. One important way is that you wouldn’t be able to <b className='font-bold'>“turn it off.”</b>
-		</div>
+		</span>
 	}
 >
 	- Turning it off will prevent it from achieving its objective. - It will fight you and, even worse, deceive you (e.g., behave until it’s in a position where you can’t turn it off, and then go after
@@ -65,8 +65,8 @@ This is a **convergent instrumental goal** (it doesn’t matter what the end goa
 
 Models like GPT-4 can’t take over the world but are still **misaligned** (they will often do things their designers didn’t want, such as lie or be offensive.)
 
-<Toggle title={<div>This is concerning because we are tasked with aligning something far more intelligent than us when we cannot properly align far weaker AI.</div>}>
-
+<Toggle title="This is concerning because we are tasked with aligning something far more intelligent than us when we cannot properly align far weaker AI.">
+<div className='-mb-5'/>
 ### Elon Musk vs. babies
 
 Here’s a way to think about this problem: say you gave the goal of “acquire/create as many paperclips as possible” to a baby. The baby may knock over some items on your table to gather a few paper clips, which isn’t horrible.
