--- a/src/pages/why-alignment/why-this-is-urgent.mdx
+++ b/src/pages/why-alignment/why-this-is-urgent.mdx
@@ -9,7 +9,7 @@ import Sources from '@/components/global/Sources';
 
 1. AGI is [being projected](https://www.dwarkeshpatel.com/p/dario-amodei) for 2029, and <span className="font-bold">it’s a realistic prediction.</span>
 
-<Toggle title={<div>While this may seem like an overly optimistic prediction, technological progress happens <b>exponentially</b>.</div>}>
+<Toggle title={<span>While this may seem like an overly optimistic prediction, technological progress happens <b>exponentially</b>.</span>}>
     - We often use the last decade as a benchmark to predict future progress, but this is a *flawed* approach: You need to imagine things progressing at a *much faster rate* than they are now.
     - For example, the 20th century saw significantly more advances than the 19th century because we had accumulated more knowledge and better technology by 1900 than we had in 1800. Knowledge and technology *compound*, leading to accelerating progress.
 
@@ -29,9 +29,9 @@ import Sources from '@/components/global/Sources';
 
    <Toggle
    	title={
-   		<div>
+   		<span>
    			Firstly, we are <i>not</i> the upper bound of intelligence.
-   		</div>
+   		</span>
    	}
    >
    	- Human intelligence is fundamentally limited by our biological constraints. For example, we have hard bounds like neuron firing rates and brain size. - In contrast, AGI will **not** have such
@@ -40,9 +40,9 @@ import Sources from '@/components/global/Sources';
 
    <Toggle
    	title={
-   		<div>
+   		<span>
    			Secondly, when this surpassing occurs, it is likely to be <i>explosive</i>.
-   		</div>
+   		</span>
    	}
    >
    	- **Software-level**: An artificial general intelligence will eventually have the capability to self-improve autonomously, leading to an exponential increase in the types of algorithms it will be
@@ -55,11 +55,11 @@ import Sources from '@/components/global/Sources';
 3. <span className='font-bold'>We have **one chance** to solve AI alignment.</span> Once a misaligned AGI exists, our fate would be sealed.
    <Toggle
    	title={
-   		<div>
+   		<span>
    			Sufficiently intelligent AI systems will possess <strong>instrumental convergent goals</strong> (
    			<LinkBadge href='/why-alignment/why-alignment-is-difficult'>Why is alignment difficult?</LinkBadge>
    			), for example <em>goal preservation</em> and <em>self-preservation</em>, which lead to AI drives that are default harmful.
-   		</div>
+   		</span>
    	}
    >
    	- **Goal preservation**: An AI system will recognize actions that would increase the likelihood of committing actions antithetical to its goals. For example, if Gandhi, a pacifist, possessed a
