--- a/src/pages/why-alignment/our-opportunity.mdx
+++ b/src/pages/why-alignment/our-opportunity.mdx
@@ -25,14 +25,16 @@ Many people and organizations have proposed methods for aligning AI. We believe 
 
 A combination of scaled-up versions of current methods is likely to be enough to solve this aspect of alignment (mostly).
 
-<Toggle title={<div><b>RLHF:</b> Although RLHF won’t scale to qualitatively superior AGI, we can use expert-level humans across all domains to generate extremely high-quality feedback signals on advanced data.</div>}>
+<div className='space-y-3 mt-2 mb-3'>
+<Toggle title={<span><b>RLHF:</b> Although RLHF won’t scale to qualitatively superior AGI, we can use expert-level humans across all domains to generate extremely high-quality feedback signals on advanced data.</span>}>
 
     The reason RLHF, as it stands, will not scale to superhuman AGI is because of its reliance on human labels. If the AGI is doing something completely incomprehensible, we won’t be able to label it appropriately, so we won’t be able to design the appropriate reward signal.
 
 </Toggle>
-<Toggle title={<div><b>Scalable Oversight:</b> We can also design AI systems to help us supervise other AI systems. For example, although humans cannot parse millions of lines of code in seconds, if we train an AI system to point out suspicious code, we can drastically reduce the amount of code we need to vet.</div>}>
+<Toggle title={<span><b>Scalable Oversight:</b> We can also design AI systems to help us supervise other AI systems. For example, although humans cannot parse millions of lines of code in seconds, if we train an AI system to point out suspicious code, we can drastically reduce the amount of code we need to vet.</span>}>
     This raises the question, “But how can we verify that the code-checking AI is trustworthy?” this is likely a much more solvable problem, as such a system would not have general intelligence. We can probably safety-check these systems as we improve them.
 </Toggle>
+</div>
 
 Importantly, at this stage, _humans will be in the loop_ and can still verify what these AI systems are actually doing.
 
@@ -47,12 +49,8 @@ As Leopold discusses in his essay, AI capability research will certainly become 
 3. Repeat inductively.
 
 <Toggle
-	title={
-		<div>
-			In this way, aligning superintelligence becomes less like an ant trying to align with a human and more like a high school student trying to align with an undergraduate student, that
-			undergraduate student trying to align with a graduate student, and so on.
-		</div>
-	}
+	title='In this way, aligning superintelligence becomes less like an ant trying to align with a human and more like a high school student trying to align with an undergraduate student, that
+			undergraduate student trying to align with a graduate student, and so on.'
 >
 	A natural question then is, “Is this much weaker form of the alignment problem possible?” We have some evidence that the answer is “Yes.” OpenAI, in their Weak-to-Strong Generalization work, showed
 	that one can use a GPT-2-level model to elicit most of GPT-4’s abilities despite GPT-2’s relative lack of intelligence. While there is still much work to be done here, this is an important first
