phewww ok a ton of stuff fixed

--- a/src/pages/why-alignment/default-dangerous.mdx
+++ b/src/pages/why-alignment/default-dangerous.mdx
@@ -71,8 +71,13 @@ In short, **no**. An AI system will use its power in a way to maximize its goals
 		</span>
 	}
 >
-	- Classic example: paperclip maximization. - Let's say aliens came to Earth and offered us 1 million dollars every time we made a paperclip. - Despite the fact our intelligence is far more than the
-	minimum intelligence necessary to make paperclips, almost everyone on Earth would immediately start making paperclips.
+
+Classic example: paperclip maximization.
+
+- Let's say aliens came to Earth and offered us 1 million dollars every time we made a paperclip.
+
+- Despite the fact our intelligence is far more than the minimum intelligence necessary to make paperclips, almost everyone on Earth would immediately start making paperclips.
+
 </Toggle>
 This means that even if the AI system were many times more intelligent than humans, this would guarantee absolutely nothing about its final goals.
 
@@ -85,8 +90,12 @@ Moreover, even if the AI system’s final goals seem safe, it is likely that it 
 		</span>
 	}
 >
-	- For example, even if an AI agent’s final goal has nothing to do with self-preservation, self-preservation is likely necessary for achieving its final goal, and hence almost any agent will assume
-	self-preservation as one of its intermediate goals. - Other convergent instrumental goals include goal-content integrity, cognitive enhancement, and resource acquisition (cite Bostrom).
+
+    - For example, even if an AI agent’s final goal has nothing to do with self-preservation, self-preservation is likely necessary for achieving its final goal, and hence almost any agent will assume
+    self-preservation as one of its intermediate goals.
+
+    - Other convergent instrumental goals include goal-content integrity, cognitive enhancement, and resource acquisition (cite Bostrom).
+
 </Toggle>
 
 Hence, it is not enough to align an AI system's final goals alone; we must also align its intermediate goals, which by default will be identical to those of a misaligned system.
