--- a/src/pages/why-alignment/why-alignment-is-difficult.mdx
+++ b/src/pages/why-alignment/why-alignment-is-difficult.mdx
@@ -45,7 +45,8 @@ _Wait, why is that difficult?_
     More specifically, an agent that only cares about a subset of the variables in a system will be willing to trade off <span class="text-font-bold-dark">arbitrarily large amounts</span> of any variables that *aren’t* part of its goal for <span class="text-font-bold-dark">arbitrarily tiny increases</span> in any of the things that *are* in its goal.
     
     >“A system that is optimizing a function of *n* variables, where the objective depends on subset of size *k\<n*, will often set the remaining unconstrained variables to extreme values. If one of those unconstrained variables is something we care about, the solution found may be *highly undesirable*.” - Stuart Russell
-    >
+    
+    <div className='mb-3' />
 </Toggle>
 
 <Toggle
