somehow tina just keeps finding things to fix...

--- a/src/pages/next-steps.mdx
+++ b/src/pages/next-steps.mdx
@@ -42,11 +42,14 @@ For example, a high-quality “[MMLU](https://arxiv.org/abs/2009.03300) for Alig
 	title={
 		<span>
 			Another option if you would like to leap directly into technical work would be to select a problem from Neel Nanda’s{' '}
-			<a href='https://www.alignmentforum.org/posts/LbrPTJ4fmABEdEnLf/200-concrete-open-problems-in-mechanistic-interpretability'>200</a> Open Problems in mechanistic interpretability. Progress in
+			<a href='https://www.alignmentforum.org/posts/LbrPTJ4fmABEdEnLf/200-concrete-open-problems-in-mechanistic-interpretability'>200 Open Problems</a> in mechanistic interpretability. Progress in
 			interpretability is likely to be extremely helpful in the future for alignment, and Neel’s list is a great way to get exposed to interesting problems in the area.
 		</span>
 	}
 >
-	- Neel also has great thoughts on how to [get started in mech interpretability](https://www.neelnanda.io/mechanistic-interpretability/getting-started). - Some of the problems there are likely
-	solved, and that’s okay! A great corollary of working on a problem or two from that list is the upskilling that it will provide.
+
+    - Neel also has great thoughts on how to [get started in mech interpretability](https://www.neelnanda.io/mechanistic-interpretability/getting-started).
+
+    	Some of the problems there are likely solved, and that’s okay! A great corollary of working on a problem or two from that list is the upskilling that it will provide.
+
 </Toggle>
