quickstart: fix typo

--- a/src/pages/quickstart.mdx
+++ b/src/pages/quickstart.mdx
@@ -43,7 +43,7 @@ import LinkBadge from '@/components/elements/LinkBadge';
 
 Most resources and knowledge about alignment are currently scattered (and it’s hard to know what’s important).
 
-This guide is a <b>curated central hub of information and resources for alignment.</b> Crucially, we view alignment as as technical problem, and as such, we provide technical resources. We keep every page short for you, with options to dig deeper.
+This guide is a <b>curated central hub of information and resources for alignment.</b> Crucially, we view alignment as a technical problem, and as such, we provide technical resources. We keep every page short for you, with options to dig deeper.
 
 
 ## Using this guide
