--- a/src/pages/next-steps.mdx
+++ b/src/pages/next-steps.mdx
@@ -26,13 +26,13 @@ If you have specific thoughts here, writing up your ideas clearly and getting fe
 
 ## Measurements and benchmarks
 
-There is currently no clear measure of " success“ or even “progress” for AI alignment; it is incredibly difficult to understand how much meaningful progress we are making.
+There is currently no clear measure of “success” or even “progress” for AI alignment; as it is incredibly difficult to understand how much meaningful progress we are making.
 
 A good proposal for such a metric that covers the engineering, ethical, and/or governmental difficulties of super alignment could be very useful in:
 
 1. Ensuring we work on what’s important, and
 
-2. Increasing the field's motivation and tractability.
+2. Increasing the field’s motivation and tractability.
 
 For example, a high-quality “[MMLU](https://arxiv.org/abs/2009.03300) for Alignment” would greatly contribute to alignment research.
 
